--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,5 +1,5 @@
 .projects-section {
-  height: 95vh;
+  min-height: 95vh;
   background-color: #11151C;
 }
 
@@ -207,5 +207,20 @@
   }
   .project-item h3 {
     font-size: 10px;
+  }
+}
+
+@media (max-width: 390px) {
+  .project-item {
+    margin-left: 2%;
+    height: 130px;
+    width: 130px;
+  }
+  .project-info {
+    font-size: 7px;
+    padding: 16px;
+  }
+  .project-item h3 {
+    font-size: 9px;
   }
 }
