--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -274,3 +274,17 @@
   }
 
 }
+
+@media screen and (max-height: 700px) {
+  .text-container p {
+    font-size: 15px;
+  }
+  
+  .text-container h1 {
+    font-size: 16px;
+  }
+  .profile-photo {
+    width: 150px;
+    height: 150px;
+  }
+}
