--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -8,7 +8,7 @@
 @font-face {
   font-family: 'Caveat';
   src: url('/src/assets/fonts/Caveat-Regular.ttf') format('truetype');
-  font-display: swap; 
+  font-display: swap;
 }
 
 .top-left {
@@ -16,7 +16,7 @@
   top: 20px;
   left: 20px;
   padding: 20px;
-  font-family: 'Caveat-Regular';
+  font-family: 'Caveat' !important;
 }
 
 
@@ -275,13 +275,25 @@
 
 }
 
-@media screen and (max-height: 700px) {
+@media only screen and (max-height: 700px) {
   .text-container p {
     font-size: 15px;
   }
-  
   .text-container h1 {
     font-size: 16px;
+  }
+  .profile-photo {
+    width: 150px;
+    height: 150px;
+  }
+}
+
+@media only screen and (max-height: 550px) {
+  .text-container p {
+    font-size: 13px;
+  }
+  .text-container h1 {
+    font-size: 14px;
   }
   .profile-photo {
     width: 150px;
