--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,13 @@
   font-display: swap; 
 }
 
-* {
+*{
   font-family: 'Roboto Slab', sans-serif;
 }
-  
 
+  
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
