--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -120,3 +120,16 @@
     max-height: 250px;
   }
 }
+
+
+@media screen and (max-height: 550px) {
+
+  .about-description h2 {
+    font-size: 20px;
+  
+  }
+
+  .about-description p {
+    font-size: 13px;
+  }
+}
